database creation changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,8 @@
 {% endblock %}
 {% block content %}
 <div class="container">
+    <div align="center"><H1>Currency Popularity from yesterday's articles</H1></div>
+    <div align="center">currencies are among the top 100 currencies taken from CoinMarketCap<h3></h3></div>
     <div id="word_cloud"></div>
 </div>
 {% endblock %}
