--- a/templates/c_dashboard.html
+++ b/templates/c_dashboard.html
@@ -8,14 +8,7 @@
             <div class="{{key}}" data-{{key}}="{{val}}"></div>
         {% endfor %}
     </div>
-    <h1>Know what's new with {{c_name.capitalize()}}</h1>
-            <div class="container">
-                <div class="row">
-                    <div id="ratingdiv" class="col chartswrap" data-rating="{{params['rating']}}" style="min-width: 310px; max-width: 400px; height: 300px; margin: 0 auto"></div>
-                    <div id="dominancediv" class="col chartswrap" data-dom="{{params['dominance']}}" style="min-width: 310px; max-width: 400px; height: 300px; margin: 0 auto"></div>
-                    <div id="popularitydiv" class="col chartswrap" data-dom="{{params['popularity']}}" style="min-width: 310px; max-width: 400px; height: 300px; margin: 0 auto"></div>
-                </div>
-            </div>
+    <div class="d-flex justify-content-center"><h1>What's new with {{c_name.capitalize()}}</h1></div>
             <div class="container">
                 <div class="status">
                 {% if params['trusted'] == 2 %}
@@ -29,6 +22,15 @@
                 {% endif %}
                 </div>
             </div>
+
+            <div class="container">
+                <div class="row">
+                    <div id="ratingdiv" class="col chartswrap" data-rating="{{params['rating']}}" style="min-width: 310px; max-width: 400px; height: 300px; margin: 0 auto"></div>
+                    <div id="dominancediv" class="col chartswrap" data-dom="{{params['dominance']}}" style="min-width: 310px; max-width: 400px; height: 300px; margin: 0 auto"></div>
+                    <div id="popularitydiv" class="col chartswrap" data-dom="{{params['popularity']}}" style="min-width: 310px; max-width: 400px; height: 300px; margin: 0 auto"></div>
+                </div>
+            </div>
+
             <div class="container">
                 <div id="carouselExampleIndicators" class="carousel slide charts-carousel" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -39,11 +41,12 @@
                         <div class="carousel-item active">
                             <div class="jumbotron jumbotron-fluid dominance-wrap">
                                 <div class="container">
+
+                                        <div class="row" id="spread-chart" style="min-width: 310px; max-width: 800px; height: 100px; margin: 0 auto"></div>
                                         <div class="row" id="skewness-chart" style="min-width: 310px; max-width: 800px; height: 100px; margin: 0 auto"></div>
                                         <div class="row" id="kurtosis-chart" style="min-width: 310px; max-width: 800px; height: 100px; margin: 0 auto"></div>
-                                        <div class="row" id="sd-chart" style="min-width: 310px; max-width: 800px; height: 100px; margin: 0 auto"></div>
-                                        <div class="row" id="spread-chart" style="min-width: 310px; max-width: 800px; height: 100px; margin: 0 auto"></div>
-                                        <div class="row" id="marketcap-chart" style="min-width: 310px; max-width: 800px; height: 100px; margin: 0 auto"></div>
+                                        <div class="row hidden" id="sd-chart" style="min-width: 310px; max-width: 800px; height: 100px; margin: 0 auto"></div>
+                                        <div class="row hidden" id="marketcap-chart" style="min-width: 310px; max-width: 800px; height: 100px; margin: 0 auto"></div>
                                 </div>
                             </div>
                         </div>
@@ -51,7 +54,7 @@
                             <div class="jumbotron jumbotron-fluid dominance-wrap">
                                 <div class="container">
                                     <div class="row">
-                                        <div class="col rating"><div id="statsdiv"></div></div>
+                                        <div class="col rating"><div id="statsdiv" style="min-width: 310px; max-width: 800px; height: 300px; margin: 0 auto"></div></div>
                                     </div>
                                 </div>
                             </div>
@@ -65,13 +68,6 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="jumbotron jumbotron-fluid domains-wrap">
-                    <div class="container">
-                        <span badge badge-info><a href="{{ url_for('currency_domains', c_name=c_name) }}">Find top domains for {{ c_name }}</a></span>
                     </div>
                 </div>
             </div>
@@ -95,7 +91,5 @@
 <script src="https://code.highcharts.com/highcharts-more.js"></script>
 <script src="https://code.highcharts.com/modules/histogram-bellcurve.js">
 <script src="https://code.highcharts.com/modules/bullet.js"></script>
-<!--<script src="https://code.highcharts.com/modules/exporting.js"></script>-->
-<!--<script src="https://code.highcharts.com/modules/export-data.js"></script>-->
 <script src="{{url_for('static', filename='js/charts.js')}}"></script>
 {% endblock %}
