--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
     {% block navbar %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menu">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{{ url_for('index') }}">
               <img src="{{url_for('static', filename='img/logo.png')}}" width="30" height="30" class="d-inline-block align-top" alt="">
               CryptoAnalysis
             </a>
@@ -26,6 +26,9 @@
                 <ul class="navbar-nav navbar-right">
                   <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('currency_table') }}">Know your currencies</a>
                   </li>
                 </ul>
             </div>
